bitbybit-portfolio/backend/k8s/bitbybit-public-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitbybit-public-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: bitbybit.hialt.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: bitbybit-service
                port:
                  number: 8080
          - path: /uploads
            pathType: Prefix
            backend:
              service:
                name: bitbybit-service
                port:
                  number: 8080
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: bitbybit-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bitbybit-frontend-service
                port:
                  number: 80
